# agent-session-selector

./: AGENTS.md  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.server.json  vite.config.ts
.claude/: launch.json  settings.local.json
.github/workflows/: ci.yml
scripts/: run-tauri.mjs
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/src/: lib.rs  main.rs
src/cli/: index.tsx
src/client/: App.tsx  index.css  main.tsx
src/client/components/: Header.tsx
src/client/components/ui/: button.tsx  card.tsx  tabs.tsx
src/client/lib/: runtime.ts
src/client/pages/: SessionsPage.tsx
src/server/: app.ts  index.ts
src/server/lib/: claudeSessions.test.ts  claudeSessions.ts
src/server/routes/: sessions.test.ts  sessions.ts
